# legal-flow

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: datetime_utils.py  db.py
app/agents/: contract_tools.py  law_tools.py  session_locks.py  supervisor.py
app/api/: deps.py  main.py  sse.py
app/auth/: deps.py  models.py  security.py  store.py
app/contracts/: __init__.py  audit.py  clause_splitter.py  consistency_agent.py  context.py  ingest.py  milvus_store.py  review_agent.py  review_graph.py  review_manager.py  store.py  (+1 more)
docker/: milvus.yaml
docs/: langgraph_graphs.md
eval/: __init__.py
scripts/: analyze_law_docs.py  convert_law_docx_to_markdown.py  ingest_legal_kb.py  normalize_legal_sources.py  parse_laws.py  reset_db.py
tests/: test_article_no.py  test_case_crawl_common.py  test_chat_resume.py  test_checkpointer_holder.py  test_consistency_force_submit.py  test_contract_dto.py  test_contract_review_stance_gate.py  test_contract_risk_contract.py  test_contract_splitter.py  test_contract_tools.py  test_contract_tools_get_risks.py  test_deepseek_llm.py  test_guide_manifest_crawl.py  test_kb_fulltext.py  test_kb_retriever.py  test_kb_tools.py  test_kb_vector_store.py  test_law_ingest_api.py  test_law_ingest_job_store.py  test_law_tools.py  test_normalize_legal_sources.py  test_overview_instruction.py  test_review_agent_submission.py  test_review_focus.py  test_review_force_submit.py  test_review_graph_persist.py  test_review_manager.py  test_review_pipeline.py  test_review_system_prompt.py  test_risk_schema.py  test_sanitize_citations.py  test_session_locks.py  test_sessions_checkpoint_cleanup.py  test_sse_cancel.py  test_stance_hitl_e2e.py  test_store_party_stance.py  test_store_risk.py  test_supervisor_checkpointer.py  test_supervisor_graph.py  test_supervisor_stance.py
(+138 files in other folders)
